# epic-wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.txt  ROADMAP.md  TEST.txt  azure-pipelines.yml  build.rs
.ci/: general-jobs  release.yml  windows-release.yml
.github/workflows/: epic-wallet-master-branch.yml
.hooks/: pre-commit
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs  owner_rpc_s.rs  types.rs
api/tests/: slate_versioning.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs
controller/tests/: accounts.rs  check.rs  file.rs  invoice.rs  no_change.rs  payment_proofs.rs  repost.rs  self_send.rs  transaction.rs  ttl_cutoff.rs  updater_thread.rs
controller/tests/common/: mod.rs
debian/: .gitignore  changelog  control  rules
doc/: .rustc_info.json  build.md  crates.js  search-index.js  source-files.js  tls-setup.md
doc/design/: wallet-arch.puml
doc/doc/: crates.js  settings.html  source-files.js
doc/doc/antidote/: all.html  index.html  struct.Condvar.html  struct.Mutex.html  struct.MutexGuard.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockWriteGuard.html  struct.TryLockError.html  struct.WaitTimeoutResult.html  type.TryLockResult.html
doc/doc/arc_swap/: all.html  fn.ptr_eq.html  index.html  sidebar-items.js  struct.ArcSwapAny.html  struct.Guard.html  struct.Lease.html  trait.AsRaw.html  trait.NonNull.html  trait.RefCnt.html  type.ArcSwap.html  type.ArcSwapOption.html  type.IndependentArcSwap.html
doc/doc/arrayvec/: struct.ArrayVec.html  struct.CapacityError.html
doc/doc/base64/: all.html  constant.CRYPT.html  constant.MIME.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  enum.LineEnding.html  enum.LineWrap.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
doc/doc/base64ct/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Base64.html  struct.Base64Bcrypt.html  struct.Base64Crypt.html  struct.Base64Unpadded.html  struct.Base64Url.html  struct.Base64UrlUnpadded.html  struct.InvalidEncodingError.html  struct.InvalidLengthError.html  trait.Encoding.html
doc/doc/bigint/: all.html  index.html
doc/doc/bytes/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  (+3 more)
doc/epic_wallet/: all.html  fn.real_main.html
doc/epic_wallet_api/: all.html  enum.ForeignCheckMiddlewareFn.html  enum.RpcId.html  enum.foreign_rpc_client.html  fn.run_doctest_foreign.html  fn.run_doctest_owner.html  index.html  sidebar-items.js  struct.ECDHPubkey.html  struct.EncryptedRequest.html  struct.EncryptedResponse.html  struct.EncryptionErrorResponse.html  struct.Foreign.html  struct.Owner.html  struct.PubAddress.html  struct.Token.html  trait.ForeignRpc.html  trait.OwnerRpc.html  trait.OwnerRpcS.html
doc/epic_wallet_config/: all.html  index.html
doc/epic_wallet_controller/: all.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html
doc/epic_wallet_impls/: enum.ErrorKind.html  fn.create_sender.html  fn.wallet_db_exists.html  index.html  sidebar-items.js  struct.DefaultLCProvider.html  struct.DefaultWalletImpl.html  struct.Error.html  struct.HTTPNodeClient.html  struct.HttpSlateSender.html  struct.KeybaseAllChannels.html  struct.KeybaseChannel.html  struct.LMDBBackend.html  struct.PathToSlate.html  trait.SlateGetter.html  trait.SlatePutter.html  trait.SlateReceiver.html  trait.SlateSender.html
doc/epic_wallet_libwallet/: all.html  enum.ErrorKind.html  enum.OutputStatus.html  enum.TxLogEntryType.html  enum.WalletInitStatus.html  fn.scan.html  sidebar-items.js  struct.AcctPathMapping.html  struct.BlockIdentifier.html  struct.CbData.html  struct.Context.html  struct.Error.html  struct.NodeVersionInfo.html  struct.OutputData.html  struct.ScannedBlockInfo.html  struct.StoredProofInfo.html  struct.TxLogEntry.html  struct.TxWrapper.html  struct.WalletInfo.html  trait.NodeClient.html  trait.WalletBackend.html  trait.WalletInst.html  trait.WalletLCProvider.html  trait.WalletOutputBatch.html
doc/epic_wallet_util/: all.html  index.html
doc/transaction/: basic-transaction-wf.puml
etc/: README.MD
impls/: Cargo.toml
impls/src/: error.rs  lib.rs  serialization.rs
impls/src/adapters/: compress.rs  emoji.rs  emoji_map.rs  epicbox.rs  file.rs  http.rs  keybase.rs  mod.rs  qr.rs  smtp.rs
impls/src/backends/: db.rs  lmdb.rs  mod.rs
impls/src/client_utils/: client.rs  json_rpc.rs  mod.rs  socksv5.rs
impls/src/epicbox/: mod.rs  protocol.rs
impls/src/lifecycle/: default.rs  mod.rs  seed.rs
impls/src/node_clients/: http.rs  mod.rs  resp_types.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: config.rs  mod.rs  process.rs  tor_manager.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  api_impl.rs  base58.rs  crypto.rs  epicbox_address.rs  error.rs  internal.rs  lib.rs  message.rs  migration.rs  slate.rs  tx_proof.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_updater.rs  types.rs
libwallet/src/internal/: keys.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/slate_versions/: mod.rs  ser.rs  v2.rs  v3.rs
libwallet/tests/: libwallet.rs  slate_versioning.rs
libwallet/tests/slates/: v2.slate
src/: lib.rs
src/cli/: cli.rs  mod.rs
src/cmd/: mod.rs  wallet.rs  wallet_args.rs
tests/: cmd_line_basic.rs  owner_v2_sanity.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/assets/: foundation.json
tests/common/: mod.rs
util/: Cargo.toml
util/src/: lib.rs  mock_rng.rs  ov3.rs
(+23391 files in other folders)
