[package]
name = "epic_wallet"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
readme = "README.md"
exclude = ["**/*.epic", "**/*.epic2"]
build = "src/build/build.rs"
edition = "2021"

[[bin]]
name = "epic-wallet"
path = "src/bin/epic-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
thiserror = "1"
clap = { version = "2.31", features = ["yaml"] }
rpassword = "5.0"
ctrlc = { version = "3.1", features = ["termination"] }
prettytable-rs = "0.10"
log = "0.4"
linefeed = "0.6"
rustyline = "9.1.2"
semver = "0.9"

epic_wallet_api = { path = "./api", version = "3.6.0" }
epic_wallet_impls = { path = "./impls", version = "3.6.0" }
epic_wallet_libwallet = { path = "./libwallet", version = "3.6.0" }
epic_wallet_controller = { path = "./controller", version = "3.6.0" }
epic_wallet_config = { path = "./config", version = "3.6.0" }
epic_wallet_util = { path = "./util", version = "3.6.0" }

[build-dependencies]
built = "0.3"

[dev-dependencies]
url = "1.7.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc = "0.5.1"
