[package]
name = "epic_wallet"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
readme = "README.md"
exclude = ["**/*.epic", "**/*.epic2"]
build = "src/build/build.rs"
edition = "2021"
resolver = "2"

[[bin]]
name = "epic-wallet"
path = "src/bin/epic-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
thiserror = "2.0.12"
clap = { version = "4.4" }
rpassword = "7.3.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
prettytable-rs = "0.10"
log = "0.4.27"
linefeed = "0.6"
rustyline = "16.0"
semver = "1.0"

epic_wallet_api = { path = "./api", version = "3.6.0" }
epic_wallet_impls = { path = "./impls", version = "3.6.0" }
epic_wallet_libwallet = { path = "./libwallet", version = "3.6.0" }
epic_wallet_controller = { path = "./controller", version = "3.6.0" }
epic_wallet_config = { path = "./config", version = "3.6.0" }
epic_wallet_util = { path = "./util", version = "3.6.0" }

[build-dependencies]
built = { version = "0.8", features = ["git2", "cargo-lock"] }

[dev-dependencies]
url = "2.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc = "0.5"

[profile.test]
panic = "abort"
