[package]
name = "epic_wallet_api"
version = "3.3.2"
authors = ["Epic Developers <epiccash@brickabode.com>"]
description = "Epic Wallet API"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1"
rand = "0.5"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.3"
chrono = { version = "0.4.4", features = ["serde"] }
ring = "0.13"
base64 = "0.9"
ed25519-dalek = "=1.0.0-pre.1"

epic_wallet_libwallet = { path = "../libwallet", version = "3.3.2" }
epic_wallet_config = { path = "../config", version = "3.3.2" }
epic_wallet_impls = { path = "../impls", version = "3.3.2" }
epic_wallet_util = { path = "../util", version = "3.3.2" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
