[package]
name = "epic_wallet_api"
version = "4.0.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Epic Wallet API"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
thiserror = "2.0"
log = "0.4"
uuid = { version = "1.16", features = ["serde", "v4"] }
serde = "1"
rand = "0.9.2"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
base64 = "0.22"
ed25519-dalek = "2.1"


epic_wallet_libwallet = { path = "../libwallet", version = "4.0.0" }
epic_wallet_config = { path = "../config", version = "4.0.0" }
epic_wallet_impls = { path = "../impls", version = "4.0.0" }
epic_wallet_util = { path = "../util", version = "4.0.0" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
