[package]
name = "epic_wallet_config"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Configuration for epic wallet, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = "1"
serde_derive = "1"
toml = "0.8.20"
dirs = "6.0.0"

epic_wallet_util = { path = "../util", version = "3.6.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
