[package]
name = "epic_wallet_controller"
version = "3.3.2"
authors = ["Epic Developers <epiccash@brickabode.com>"]
description = "Controllers for epic wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1.0.69"
log = "0.4"
prettytable-rs = "0.7"
ring = "0.13"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }
easy-jsonrpc-mw = "0.5.3"
lazy_static = "1"
tungstenite = {version="*", features = ["native-tls"] }

epic_wallet_util = { path = "../util", version = "3.3.2" }
epic_wallet_api = { path = "../api", version = "3.3.2" }
epic_wallet_impls = { path = "../impls", version = "3.3.2" }
epic_wallet_libwallet = { path = "../libwallet", version = "3.3.2" }
epic_wallet_config = { path = "../config", version = "3.3.2" }
