[package]
name = "epic_wallet_controller"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Controllers for epic wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
thiserror = "2.0"
futures = "0.3"
hyper = { version = "1.6", features = ["full"]}
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
rand = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.10"
ring = "0.17"
term = "1.0"
bytes = "1.10"
tokio = { version = "1", features = ["full"] }

uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
easy-jsonrpc-mw = "0.5"
lazy_static = "1"
tungstenite = {version="*", features = ["native-tls"] }

epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_api = { path = "../api", version = "3.6.0" }
epic_wallet_impls = { path = "../impls", version = "3.6.0" }
epic_wallet_libwallet = { path = "../libwallet", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }
