[package]
name = "epic_wallet_impls"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
thiserror = "1"
rand = "0.5"
semver = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16.20"

uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
bitvec = "1"
emoji = "0.2.1"
sqlite = "0.31.1"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
lazy_static = "1"
http = "0.2"
hyper-timeout = "0.4"
hyper-rustls = "0.24.1"
rustls = "0.21.7"

#Socks/Tor
byteorder = "1"
ed25519-dalek = "=1.0.0-pre.1"
x25519-dalek = "0.6"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.9"
parking_lot = "0.6"
tungstenite = {version="*", features = ["native-tls"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["rustls-tls", "socks"] }

epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }
epic_wallet_libwallet = { path = "../libwallet", version = "3.6.0" }
