[package]
name = "epic_wallet_impls"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
blake2-rfc = "0.2"
futures = "0.3"
thiserror = "2.0.12"
rand = "0.9.0"
semver = "1.0.26"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.17.14"

uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
bitvec = "1"
emoji = "0.2.1"
lazy_static = "1"
http = "1.3.1"
hyper-timeout = "0.4"
hyper-rustls = "0.24.2"
rustls = "0.21.7"

#Socks/Tor
byteorder = "1"
ed25519-dalek = "2.1.1"
x25519-dalek = "2.0.1"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.35.0"
parking_lot = "0.12.3"
tungstenite = {version="*", features = ["native-tls"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "socks"] }

epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }
epic_wallet_libwallet = { path = "../libwallet", version = "3.6.0" }


sqlite = { version="0.31.1"}
#libsqlite3-sys = { version = "0.32.0", features = ["bundled"] }
