[package]
name = "epic_wallet_impls"
version = "4.0.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
blake2-rfc = "0.2"
futures = "0.3"
thiserror = "2.0"
rand = "0.9.2"
semver = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.17"

uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bitvec = "1"
emoji = "0.2"
lazy_static = "1"
http = "1.3"
hyper-timeout = "0.5"
hyper-rustls = "0.27"
rustls = "0.23"

#Socks/Tor
byteorder = "1"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.36"
parking_lot = "0.12"
tungstenite = {version="*", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "blocking"] }
sqlite = { version="0.37"}
once_cell = "1.21.3"
base64 = "0.22"

epic_wallet_util = { path = "../util", version = "4.0.0" }
epic_wallet_config = { path = "../config", version = "4.0.0" }
epic_wallet_libwallet = { path = "../libwallet", version = "4.0.0" }

