[package]
name = "epic_integration"
version = "1.1.0"
authors = ["Epic Developers <epiccash@brickabode.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
keywords = [ "crypto", "epic", "mimblewimble" ]
workspace = ".."
edition = "2021"

[dependencies]
hyper = { version = "1.7", features = ["full"]}
futures = "0.3"
http = "1.3"
itertools = "0.14"
rand = "0.9.2"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
tokio =  "1"
blake2-rfc = "0.2"
bufstream = "0.1"