[package]
name = "epic_wallet_libwallet"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"

[dependencies]
blake2-rfc = "0.2"
thiserror = "1"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
lazy_static = "1"
strum = "0.15"
strum_macros = "0.15"
ed25519-dalek = "=1.0.0-pre.1"
sha3 = "0.8"
byteorder = "1"
data-encoding = "2"
sqlite = "0.31.1"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
sha2 = "0.9"
digest = "0.9"
ring = "0.16.20"
regex = "1"
tungstenite = {version="*", features = ["native-tls"] }
aead = "0.5.2"
chacha20poly1305 = "0.10.1"



epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }
