[package]
name = "epic_wallet_libwallet"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
blake2-rfc = "0.2"
thiserror = "2.0.12"
rand = "0.9.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
lazy_static = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
ed25519-dalek = "=1.0.0-pre.1"
sha3 = "0.10.8"
byteorder = "1"
data-encoding = "2"

sha2 = "0.10.8"
digest = "0.10.7"
ring = "0.17.14"
regex = "1"
tungstenite = {version="*", features = ["native-tls"] }
aead = "0.5.2"
chacha20poly1305 = "0.10.1"



epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }


sqlite = { version="0.31.1"}
#libsqlite3-sys = { version = "0.32.0", features = ["bundled"] }
