[package]
name = "epic_wallet_libwallet"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"
workspace = ".."

[dependencies]
blake2-rfc = "0.2"
thiserror = "2.0"
rand = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
strum = "0.27"
strum_macros = "0.27"
ed25519-dalek = "2.1"
sha3 = "0.10"
byteorder = "1"
data-encoding = "2"
sqlite = "0.37"
#libsqlite3-sys = { version = ">=0.8.0, <0.13.0", optional = true, features = ["bundled"] }
sha2 = "0.10"
digest = "0.10"
ring = "0.17"
regex = "1"
tungstenite = {version="*", features = ["native-tls"] }
aead = "0.5"
chacha20poly1305 = "0.10"



epic_wallet_util = { path = "../util", version = "3.6.0" }
epic_wallet_config = { path = "../config", version = "3.6.0" }
