[package]
name = "epic_wallet_util"
version = "3.6.0"
authors = ["Epic Developers <info@epiccash.com>"]
description = "Util, for generic utilities and to re-export epic crates"
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic-wallet"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
epic_core     = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_keychain = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_chain    = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_util     = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_api      = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_store    = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }

# For Local use
# epic/
# epic-wallet/
#epic_core     = { path="../../epic/core" }
#epic_keychain = { path="../../epic/keychain" }
#epic_chain    = { path="../../epic/chain" }
#epic_util     = { path="../../epic/util" }
#epic_api      = { path="../../epic/api" }
#epic_store    = { path="../../epic/store" }

[dev-dependencies]
pretty_assertions = "0.5.1"
